...
"0C2-LV-LAx.ibExternalAccessibilityDescription" = "CheckAllInstancesButton";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "AddInstanceButton"; ObjectID = "15P-VU-gSC"; */
"15P-VU-gSC.ibExternalAccessibilityDescription" = "AddInstanceButton";

...
"1UK-8n-QPP.title" = "Customize Toolbar…";

/* Class = "NSMenuItem"; title = "Version Dashboard"; ObjectID = "1Xt-HY-uBw"; */
"1Xt-HY-uBw.title" = "Version Dashboard";

...
"6qx-Y3-mPn.ibExternalAccessibilityDescription" = "RefreshSpinner";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "WebserverLabel"; ObjectID = "6rc-fo-hW0"; */
"6rc-fo-hW0.ibExternalAccessibilityDescription" = "WebserverLabel";

...
"88g-4D-8nc.title" = "PHP Version";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "StatusLabel"; ObjectID = "8AN-Ki-O7s"; */
"8AN-Ki-O7s.ibExternalAccessibilityDescription" = "StatusLabel";

...
"AYu-sK-qS6.title" = "Main Menu";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "HostLabel"; ObjectID = "AmR-J1-2Dl"; */
"AmR-J1-2Dl.ibExternalAccessibilityDescription" = "HostLabel";

...
"Bue-0R-xcd.title" = "System";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "SystemLabel"; ObjectID = "BzC-Al-VNp"; */
"BzC-Al-VNp.ibExternalAccessibilityDescription" = "SystemLabel";

...
"Csj-fh-NFn.ibExternalAccessibilityDescription" = "OwncloudErrorMessage";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "CurrentVersionLabel"; ObjectID = "D4G-6k-UnL"; */
"D4G-6k-UnL.ibExternalAccessibilityDescription" = "CurrentVersionLabel";

...
"Dhg-Mj-GZ8.ibExternalAccessibilityDescription" = "OverviewInstancesChart";

/* Class = "NSToolbarItem"; label = "Detailed View"; ObjectID = "E4i-Mv-nM7"; */
"E4i-Mv-nM7.label" = "Detailed View";

...
"MaW-lU-m0K.ibExternalAccessibilityDescription" = "WebserverLabel";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "LastCheckLabel"; ObjectID = "Nve-po-yOl"; */
"Nve-po-yOl.ibExternalAccessibilityDescription" = "LastCheckLabel";

...
"SKc-0J-o2d.title" = "Outdated instances";

/* Class = "NSTableView"; ibExternalAccessibilityDescription = "InstanceTableView"; ObjectID = "SUz-Zq-Pay"; */
"SUz-Zq-Pay.ibExternalAccessibilityDescription" = "InstanceTableView";

...
"Wpt-K6-smb.ibExternalAccessibilityDescription" = "HostLabel";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "WordpressHostURL"; ObjectID = "Wrg-Pp-ChO"; */
"Wrg-Pp-ChO.ibExternalAccessibilityDescription" = "WordpressHostURL";

...
"bY0-gO-HiG.title" = "Current Version";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "PhpVersionLabel"; ObjectID = "bit-zb-leL"; */
"bit-zb-leL.ibExternalAccessibilityDescription" = "PhpVersionLabel";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "WordpressInstanceCreation"; ObjectID = "bqa-eA-va2"; */
"bqa-eA-va2.ibExternalAccessibilityDescription" = "WordpressInstanceCreation";

...
"fbO-nR-KgK.title" = "Cancel";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "WordpressSave"; ObjectID = "g7K-4a-4GT"; */
"g7K-4a-4GT.ibExternalAccessibilityDescription" = "WordpressSave";

...
"gl2-Dz-Xy8.ibExternalAccessibilityDescription" = "EditInstanceButton";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "RemoveInstanceButton"; ObjectID = "h8f-9x-UZL"; */
"h8f-9x-UZL.ibExternalAccessibilityDescription" = "RemoveInstanceButton";

...
"hEh-yb-k6z.ibExternalAccessibilityDescription" = "EditInstanceName";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "LatestVersionLabel"; ObjectID = "hIz-IQ-rem"; */
"hIz-IQ-rem.ibExternalAccessibilityDescription" = "LatestVersionLabel";

...
