...
"noSelectionMade" = "No instance selected.";
"pleaseCheck" = "Please check instance %@";
"outdated" = "Outdated";
"uptodate" = "Up to date";
"clipboardCopyingWorked" = "URL copied";
"clipboardCopyingFailed" = "URL not copied";
"searchInstances" = "Search instances";
"instances" = "Instances";
"copyUrl" = "Copy download URL";

