...
                                <items>
                                    <navigationItem title="Instance type" id="cPi-Gg-wgG">
                                        <barButtonItem key="leftBarButtonItem" title="Cancel" largeContentSizeImage="Cancel Button" id="zXK-cj-yLL">
                                            <connections>
                                                <action selector="cancelAction:" destination="vZD-O3-fEl" id="RGY-S9-LOQ"/>
...
                                <rect key="frame" x="0.0" y="335" width="375" height="111"/>
                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Piwik instance type" label="Piwik instance type"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="111" id="nas-vX-MzI"/>
...
                                <rect key="frame" x="0.0" y="196" width="375" height="111"/>
                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Wordpress instance type" label="Wordpress instance type"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="111" id="r0U-JN-7DN"/>
...
                                <rect key="frame" x="0.0" y="613" width="375" height="111"/>
                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Joomla instance type" label="Joomla instance type"/>
                                <state key="normal" image="joomla.png"/>
                                <connections>
...
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Save" largeContentSizeImage="Save button" id="62W-7u-92t">
                                            <connections>
                                                <action selector="saveInstance:" destination="gui-Px-GSp" id="JT8-xL-2FA"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2PD-Lz-0iq">
                                <rect key="frame" x="22.333333333333343" y="140" width="330.33333333333326" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Instance name" label="Instance name"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cZs-p4-scK">
                                <rect key="frame" x="22.333333333333343" y="216" width="330.33333333333326" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Host url" label="Host url"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Host URL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHm-tV-PWU">
                                <rect key="frame" x="22.333333333333343" y="187" width="330.33333333333326" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
        <scene sceneID="Z2p-PR-8It">
            <objects>
                <viewController title="Wordpress instance" id="0ky-I9-IUs" customClass="WordpressInstanceViewController" customModule="VersionDashboardiOS" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="umk-Gh-0oW"/>
...
                                <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <items>
                                    <navigationItem title="Instance details" id="JeE-xj-jLB">
                                        <barButtonItem key="leftBarButtonItem" title="Cancel" largeContentSizeImage="Cancel Button" id="Nj1-S9-v7S">
                                            <connections>
...
                                <rect key="frame" x="16" y="155" width="343" height="30"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="instancetitle" label="Instance title"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
...
                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Api token data" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nrK-CU-JhG">
                                <rect key="frame" x="16" y="583" width="343" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="apitoken" label="Api token"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Summary" image="summary.png" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="activitySpinner" destination="0Hu-nC-Nz9" id="Qla-J9-rlG"/>
...
        <scene sceneID="f3O-xL-Zr6">
            <objects>
                <viewController title="Piwik instance" id="vjA-5G-CWc" customClass="PiwikInstanceViewController" customModule="VersionDashboardiOS" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="7Tp-b5-q9M"/>
...
        <scene sceneID="DVm-RW-txN">
            <objects>
                <viewController title="Joomla instance" id="8a8-A2-dc1" customClass="JoomlaInstanceViewController" customModule="VersionDashboardiOS" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="d3u-Dk-O3f"/>
...
