...
                success(true)
            } else {
                success(false)
            }
        })
        // iOS >= 13 use UIimage(init(systemName: UIBarButtonItem.SystemItem.trash))
        deleteAction.image = UIImage(named: "trash")
        deleteAction.backgroundColor = .red
        
        return [deleteAction]
    }
    
    func createLeadingSwipeActions(systemInstanceName: String) -> [UIContextualAction] {
...
